--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "con-fusion",
   "version": "0.0.0",
+  "engines": {
+    "node": "6.11.1"
+  }
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
