--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "node-sass": "^7.0.1",
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
@@ -48,7 +49,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2",
-    "node-sass":"1.49.9"
+    "typescript": "~2.9.2"
   }
 }
